--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <!-- Use it like any other HTML element -->
 <model-viewer
     alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum"
-    src="./SerumBlanco2.glb" ar ar-modes="webxr scene-viewer quick-look"
-    seamless-poster shadow-intensity="1" camera-controls></model-viewer>
+    src="./SerumNegro1.glb" ar ar-modes="webxr scene-viewer quick-look"
+    seamless-poster shadow-intensity="1" camera-controls camera-orbit="-14deg 115deg 14.5m" disable-zoom></model-viewer>
     
 </body>
 
@@ -25,7 +25,7 @@
 
 <style>
     model-viewer {
-        width: 1080px;
-        height: 1200px;
+        width: 540px;
+        height: 600px;
     }
 </style>
